--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
     "email": "jonas.duri@gmail.com",
     "devDependencies": {
         "grunt": "^0.4.5"
+    },
+
+    "devDependencies": {
+        "grunt": "^0.4.5",
+        "grunt-contrib-coffee": "^0.10.1",
+        "grunt-contrib-concat": "^0.5.0",
+        "grunt-contrib-jshint": "^0.10.0",
+        "grunt-contrib-uglify": "^0.5.1",
+        "grunt-contrib-watch": "^0.6.1"
     }
 }
